Improve the no-Javascript landing page.

--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,17 @@ function restoreScrollPosition() {
   <body>
 <nav class="navbar navbar-dark navbar-expand-sm bg-secondary mb-3">
   <div class="container" id="navbar">
-    <span class="navbar-brand mr-auto">MagicISRC</span>
+    <span class="navbar-brand">kepstin’s MagicISRC</span>
+    <div class="show navbar-collapse me-auto">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="seeding.html">Seeding and Importing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="privacy.html">Privacy Policy</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 <div class="container">
@@ -1055,7 +1065,8 @@ function restoreScrollPosition() {
 </div>
 <div class="container" id="container">
   <h1 class="h3">kepstin’s MagicISRC</h1>
-  <p>If you’re seeing this, you either have Javascript disabled, or I’ve gone and broken the page.</p>
+  <p>The MagicISRC tool requires that Javascript is enabled. It runs completely in your web browser. For information about privacy and what data is stored and sent, please read the <a href="privacy.html">Privacy Policy</a>.</p>
+  <p>It's also possible that I’ve made a mistake in the code, or the page isn’t compatible with your web browser. If you’re sure Javascript is enabled and you still see this page, please file an issue on <a href="https://github.com/kepstin/magicisrc">Github</a>.</p>
 </div>
 <footer class="text-secondary my-3">
   <div class="container">
