use class="form-control"

--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@ function restoreScrollPosition() {
     <label for="edit_note-txt" class="form-label fw-bold">
       Edit note:
     </label>
-    <textarea width="50%" rows="8" name="edit-note" id="edit-note-txt" googl="true"><%= editNote %></textarea>  
+    <textarea class="form-control"  rows="8" name="edit-note" id="edit-note-txt" googl="true"><%= editNote %></textarea>
   </div>
   <div class="row">
       <div class="col-11 col-sm-5 col-md-4 col-lg-3 offset-sm-1">
