Add seeding link to Apple Music Barcodes/ISRCs script

--- a/seeding.html
+++ b/seeding.html
@@ -22,6 +22,15 @@
     <div class="col">
       <div class="card">
         <div class="card-body">
+          <h5 class="card-title">Apple Music Barcodes/ISRCs</h5>
+	  <p class="card-text">Browser userscript that allows reading barcodes, ISRCs, and other metadata from Apple Music releases.</p>
+          <a href="https://github.com/ToadKing/apple-music-barcode-isrc" class="card-link">Github Repository</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
           <h5 class="card-title">Your tool here</h5>
           <p class="card-text">If you’re using MagicISRC to submit ISRCs to Musicbrainz in your app or userscript, please let me know so I can list it here!</p>
           <a href="https://github.com/kepstin/magicisrc" class="card-link">Open an issue on Github</a>
