--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@ function checkMbid(params) {
   if (!mbid || mbid == "") {
     // "mbid" isn't found. Let's check for the alias
     mbid = params.get("musicbrainzid");
+    params.delete("musicbrainzid");
   }
 
   if (!mbid || mbid == "") {
