Add link to update release notes.

--- a/index.html
+++ b/index.html
@@ -892,6 +892,9 @@ function restoreScrollPosition() {
 <div class="show navbar-collapse me-auto">
   <ul class="navbar-nav">
     <li class="nav-item">
+      <a class="nav-link" href="https://github.com/kepstin/magicisrc/releases/tag/v20240922.0">v20240922.0</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" href="seeding.html">Seeding and Importing</a>
     </li>
     <li class="nav-item">
