--- a/index.html
+++ b/index.html
@@ -889,6 +889,9 @@ function restoreScrollPosition() {
 <div class="show navbar-collapse me-auto">
   <ul class="navbar-nav">
     <li class="nav-item">
+      <a class="nav-link" href="https://github.com/kepstin/magicisrc/releases">Release Notes</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" href="seeding.html">Seeding and Importing</a>
     </li>
     <li class="nav-item">
