Update documentation for edit-note submission.

--- a/privacy.html
+++ b/privacy.html
@@ -30,7 +30,7 @@
     <li><b>MusicBrainz access token.</b> (when submitting ISRCs)</li>
     <li><b>Code verifier.</b> (when logging in)</li>
     <li><b>Release MBID.</b> (when loading a release)</li>
-    <li><b>Recording MBIDs and ISRCs.</b> (when submitting ISRCs)</li>
+    <li><b>Recording MBIDs, ISRCs, and Edit Note.</b> (when submitting ISRCs)</li>
   </ul>
   <h2>Web access logs</h2>
   <p>Like many other web services, I keep logs of all web requests made to this service. These logs are used for diagnostic and traffic management purposes, and no information from them is sent to any third party or made available publicly. The logs are deleted after 14 days, although anonymized aggregate traffic data may be preserved indefinitely. The following personal data is logged:</p>
