--- a/seeding.html
+++ b/seeding.html
@@ -62,6 +62,10 @@
       <p>An ISRC, specified by sequential position.</p>
       <p>If you just have a list of ISRCs but you do not know how they are split between media, use this format. This parameter format is primarily supported for backwards compatibility with older ISRC submission tools – please use the Medium &amp; Track format instead if possible. Within the name of the parameter, <code><u>N</u></code> is replaced with the position (counting from 1). CD pregap tracks are not supported; they will be skipped in the numbering sequence.</p>
     </dd>
+    <dt class="col-12"><code>edit-note</code></dt>
+    <dd class="col offset-1">
+      <p>An edit note to include with the ISRC addition edit.</p>
+    </dd>
   </dl>
 </div>
 <footer class="text-muted my-3">
