Code and visual style updates.
Rename a few functions to match other other functions with similar
functionality. Don't double-escape the edit note when submitting.

Move the edit note field down below the edit preview and add a copy of
the MusicBrainz edit note field description.

--- a/seeding.html
+++ b/seeding.html
@@ -65,6 +65,7 @@
     <dt class="col-12"><code>edit-note</code></dt>
     <dd class="col offset-1">
       <p>An edit note to include with the ISRC addition edit.</p>
+      <p>See the <a href="https://musicbrainz.org/doc/Edit_Note">MusicBrainz Edit Note documentation</a> for detail on the use and formatting of an edit note, and <a href="https://musicbrainz.org/doc/How_to_Write_Edit_Notes">How to Write Edit Notes</a> for more information on what a good edit note should include.</p>
     </dd>
   </dl>
 </div>
