--- a/privacy.html
+++ b/privacy.html
@@ -8,9 +8,22 @@
     <link rel="stylesheet" href="fonts.css">
   </head>
   <body>
-<nav class="navbar navbar-dark bg-secondary mb-3">
+<nav class="navbar navbar-dark navbar-expand-sm bg-secondary mb-3">
   <div class="container" id="navbar">
     <a href="/" class="navbar-brand mr-auto">kepstin’s MagicISRC</a>
+    <div class="show navbar-collapse me-auto">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/kepstin/magicisrc/releases">Release Notes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="seeding.html">Seeding and Importing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="privacy.html">Privacy Policy</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 <div class="container">
