Add Harmony to seeding page

--- a/seeding.html
+++ b/seeding.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="fonts.css">
   </head>
   <body>
-<nav data-bs-theme="dark" class="navbar navbar-expand-sm bg-secondary mb-3">
+<nav class="navbar navbar-dark navbar-expand-sm bg-secondary mb-3">
   <div class="container" id="navbar">
     <a href="/" class="navbar-brand mr-auto">kepstin’s MagicISRC</a>
     <div class="show navbar-collapse me-auto">
@@ -37,6 +37,16 @@
           <h5 class="card-title">Apple Music Barcodes/ISRCs</h5>
 	  <p class="card-text">Browser userscript that allows reading barcodes, ISRCs, and other metadata from Apple Music releases.</p>
           <a href="https://github.com/ToadKing/apple-music-barcode-isrc" class="card-link">Github Repository</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Harmony</h5>
+          <p class="card-text">Music Metadata Aggregator and MusicBrainz Importer</p>
+          <a href="https://harmony.pulsewidth.org.uk/" class="card-link">Harmony</a>
+          <a href="https://github.com/kellnerd/harmony" class="card-link">Github Repository</a>
         </div>
       </div>
     </div>
