More detailed description of Harmony

--- a/seeding.html
+++ b/seeding.html
@@ -44,7 +44,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Harmony</h5>
-          <p class="card-text">Music Metadata Aggregator and MusicBrainz Importer</p>
+          <p class="card-text">Music Metadata Aggregator and MusicBrainz Importer. Look up release metadata from multiple sources and import the resulting combined release into MusicBrainz.</p>
           <a href="https://harmony.pulsewidth.org.uk/" class="card-link">Harmony</a>
           <a href="https://github.com/kellnerd/harmony" class="card-link">Github Repository</a>
         </div>
