Fix "IRSC" typo on seeding page.

--- a/seeding.html
+++ b/seeding.html
@@ -28,7 +28,7 @@
 </nav>
 <div class="container">
   <h1>Seeding and Importing</h1>
-  <p>I encourage people who are building IRSC scanners or importer Userscripts for music store and streaming pages to use MagicISRC as an ISRC submission UI. If you do that, then you don't need to build an OAuth authentication system for the MusicBrainz API, and as a bonus the MagicISRC page includes a built-in edit preview, and detection for common problems like duplicated/shifted ISRCs.</p>
+  <p>I encourage people who are building ISRC scanners or importer Userscripts for music store and streaming pages to use MagicISRC as an ISRC submission UI. If you do that, then you don't need to build an OAuth authentication system for the MusicBrainz API, and as a bonus the MagicISRC page includes a built-in edit preview, and detection for common problems like duplicated/shifted ISRCs.</p>
   <h2 id="links">Tools using MagicISRC for ISRC submission</h2>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mb-3">
     <div class="col">
