--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>kepstin’s MagicISRC (Beta)</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="icon" href="favicon.svg">
 <script type="text/javascript">
 "use strict";
 
