--- a/seeding.html
+++ b/seeding.html
@@ -6,6 +6,7 @@
     <title>kepstin’s MagicISRC Seeding and Importing</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="icon" href="favicon.svg">
   </head>
   <body>
 <nav class="navbar navbar-dark navbar-expand-sm bg-secondary mb-3">
